add json serialization

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  test:
   flutter_test:
     sdk: flutter
 
@@ -66,6 +67,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/json/pullups_program.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
